bugfix aos not showing

--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -1,6 +1,8 @@
 ---
 import Navbar from "./Navbar.astro";
 import Footer from "./Footer.astro";
+import AOS from "aos";
+import "aos/dist/aos.css";
 ---
 
 <!doctype html>
@@ -40,10 +42,8 @@ import Footer from "./Footer.astro";
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      import AOS from "aos";
-      import "aos/dist/aos.css";
+    <script is:inline src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script is:inline>
       AOS.init({
         duration: 1000,
       });
