--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -10,7 +10,7 @@ import "aos/dist/aos.css";
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/cameroon/styles.css" />
     <link
       rel="shortcut icon"
       href="/logo.svg"
