--- a/src/layout/Navbar.astro
+++ b/src/layout/Navbar.astro
@@ -16,10 +16,10 @@
     <div class="collapse navbar-collapse" id="navbarsExample11">
       <ul class="navbar-nav ms-auto justify-content-lg-center fw-semibold">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/">HOME</a>
+          <a class="nav-link" aria-current="page" href="/cameroon">HOME</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="menu">MENU</a>
+          <a class="nav-link" href="/cameroon/menu">MENU</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">LAYANAN</a>
