--- a/src/component/About.astro
+++ b/src/component/About.astro
@@ -3,7 +3,7 @@ import { Image } from "astro:assets";
 import Menu1 from "../assets/6p5I7EIH2fHFI3F18ChtwkwxVefhqkqJ0xLQxLeV.webp";
 ---
 
-<section id="about" class="">
+<section id="about" class="overflow-hidden">
   <div style="padding-top: 60px; padding-bottom: 60px;" class="container pb-5">
     <div class="row row-cols-1 row-cols-lg-2">
       <div data-aos="fade-right" class="col">
