--- a/src/component/Contact.astro
+++ b/src/component/Contact.astro
@@ -1,4 +1,4 @@
-<section id="contact">
+<section class="overflow-hidden" id="contact">
   <div class="container text-center py-4">
     <div data-aos="fade-right">
       <div style="text-transform: uppercase; opacity: 60%" class="fw-bold">
@@ -11,7 +11,7 @@
     </div>
   </div>
 </section>
-<section id="social">
+<section class="overflow-hidden" id="social">
   <div class="container py-5">
     <div
       data-aos="fade-left"
