--- a/src/component/Menu.astro
+++ b/src/component/Menu.astro
@@ -3,7 +3,7 @@ import { Image } from "astro:assets";
 import Menu1 from "../assets/menu.jpg";
 ---
 
-<section id="menu">
+<section class="overflow-hidden" id="menu">
   <div class="container mt-3 py-5 text-center">
     <div data-aos="fade-up">
       <div
