--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Momen from "../component/Momen.astro";
 import Contact from "../component/Contact.astro";
 ---
 
-<Layout>
+<Layout title="Cameroon Cafe - Quality Indonesian Cafeshop" active="home">
   <Carousel />
   <Menu />
   <About />
