--- a/src/pages/menu/_component/Card.astro
+++ b/src/pages/menu/_component/Card.astro
@@ -5,7 +5,7 @@ import Menu1 from "../../../assets/menu.jpg";
 
 <div class="col">
   <div
-    class="border-0 position-relative card gap-lg-4 align-items-center d-flex flex-column flex-md-row"
+    class="border-0 position-relative card gap-md-4 align-items-center d-flex flex-column flex-md-row"
   >
     <div class="img"><Image class={"w-100 h-100"} src={Menu1} alt="" /></div>
     <div class="card-body">
