--- a/src/pages/menu/_component/Coffe.astro
+++ b/src/pages/menu/_component/Coffe.astro
@@ -2,8 +2,8 @@
 import Card from "./Card.astro";
 ---
 
-<section class="mb-3" id="coffe">
-  <div class="container py-5">
+<section class="mb-3 overflow-hidden" id="coffe">
+  <div class="container position-relative py-5">
     <header data-aos="fade-right" style="color: var(--secondary)">
       <div class="text-uppercase fw-semibold fs-1">Coffee-based drinks</div>
       <div style="text-align: start;" class="decor mt-1"></div>
@@ -17,7 +17,7 @@ import Card from "./Card.astro";
         Susu.
       </div>
     </header>
-    <div style="margin-top: 72px;" class="row row-cols-1 g-lg-5 row-cols-md-2">
+    <div style="margin-top: 72px;" class="row row-cols-1 g-5 row-cols-md-2">
       <div data-aos="fade-right"><Card /></div>
       <div data-aos="fade-left"><Card /></div>
       <div data-aos="fade-right"><Card /></div>
