--- a/src/pages/menu/_component/FoodSnack.astro
+++ b/src/pages/menu/_component/FoodSnack.astro
@@ -2,7 +2,7 @@
 import Card from "./Card.astro";
 ---
 
-<section class="mb-3" id="coffe">
+<section class="mb-3 overflow-hidden" id="coffe">
   <div class="container py-5">
     <header data-aos="fade-right" style="color: var(--secondary)">
       <div class="text-uppercase fw-semibold fs-1">Food and snack</div>
