--- a/src/pages/menu/_component/Hampers.astro
+++ b/src/pages/menu/_component/Hampers.astro
@@ -3,7 +3,7 @@ import { Image } from "astro:assets";
 import Img from "../../../assets/hampers.jpg";
 ---
 
-<div class="my-5 pb-5" id="hampers">
+<div class="my-5 overflow-hidden pb-5" id="hampers">
   <div class="container">
     <div class="row row-cols-1 g-md-5 gy-3 gy-md-0 row-cols-md-2">
       <div data-aos="fade-right">
