--- a/src/pages/menu/index.astro
+++ b/src/pages/menu/index.astro
@@ -9,7 +9,7 @@ import Merch from "./_component/Merch.astro";
 import Home from "./_component/Home.astro";
 ---
 
-<Layout>
+<Layout title="Cameroon Cafe - Menu" active="menu">
   <Home />
   <Coffe />
   <NonCoffe />
