--- a/src/component/Carousel.astro
+++ b/src/component/Carousel.astro
@@ -1,3 +1,7 @@
+---
+import CarouselItem from "./CarouselItem.astro";
+---
+
 <header>
   <div id="carouselExampleIndicators" class="carousel h-100 slide">
     <div class="carousel-indicators">
@@ -18,12 +22,18 @@
         data-bs-target="#carouselExampleIndicators"
         data-bs-slide-to="2"
         aria-label="Slide 3"></button>
+      <button
+        type="button"
+        data-bs-target="#carouselExampleIndicators"
+        data-bs-slide-to="3"
+        aria-label="Slide 4"></button>
+      <button
+        type="button"
+        data-bs-target="#carouselExampleIndicators"
+        data-bs-slide-to="4"
+        aria-label="Slide 5"></button>
     </div>
-    <div class="carousel-inner h-100">
-      <div class="carousel-item h-100 active">
-        <div class="h-100 w-100 bg-primary"></div>
-      </div>
-    </div>
+    <CarouselItem />
     <button
       class="carousel-control-prev"
       type="button"
