--- a/src/component/Momen.astro
+++ b/src/component/Momen.astro
@@ -1,4 +1,4 @@
-<section id="take">
+<section class="overflow-hidden" id="take">
   <div class="container text-center py-5">
     <div data-aos="fade-left">
       <div
