--- a/src/layout/Navbar.astro
+++ b/src/layout/Navbar.astro
@@ -45,6 +45,9 @@
 </nav>
 <slot name="nav-bottom" />
 <style>
+  .navbar {
+    max-width: 100vw;
+  }
   .navbar-brand {
     color: var(--primary) !important;
   }
