--- a/src/pages/menu/_component/NonCoffe.astro
+++ b/src/pages/menu/_component/NonCoffe.astro
@@ -2,7 +2,7 @@
 import Card from "./Card.astro";
 ---
 
-<section class="mb-3" id="non-coffe">
+<section class="mb-3 overflow-hidden" id="non-coffe">
   <div class="container py-5">
     <header data-aos="fade-left" style="color: var(--secondary)">
       <div class="text-uppercase fw-semibold fs-1">NonCoffee-based drinks</div>
