--- a/src/layout/Navbar.astro
+++ b/src/layout/Navbar.astro
@@ -1,3 +1,10 @@
+---
+import NavbarItem from "./NavbarItem.astro";
+interface Props {
+  active: string;
+}
+---
+
 <nav class="navbar py-2 shadow-sm navbar-expand-lg fixed-top bg-white">
   <div class="container">
     <a class="navbar-brand fs-4 fw-bold" href=" #"> CAMEROON </a>
@@ -15,51 +22,64 @@
 
     <div class="collapse navbar-collapse" id="navbarsExample11">
       <ul class="navbar-nav ms-auto justify-content-lg-center fw-semibold">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/cameroon">HOME</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/cameroon/menu">MENU</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">LAYANAN</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">MEMBER</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">PELUANG</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">BERITA</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">KONTAK</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">TENTANG KAMI</a>
-        </li>
+        <NavbarItem
+          endpoint="home"
+          href="/cameroon"
+          title="HOME"
+          active={Astro.props.active}
+        />
+        <NavbarItem
+          endpoint="menu"
+          href="/cameroon/menu"
+          title="MENU"
+          active={Astro.props.active}
+        />
+        <NavbarItem
+          endpoint="layanan"
+          href="#"
+          title="LAYANAN"
+          active={Astro.props.active}
+        />
+        <NavbarItem
+          endpoint="member"
+          href="#"
+          title="MEMBER"
+          active={Astro.props.active}
+        />
+        <NavbarItem
+          endpoint="peluang"
+          href="#"
+          title="PELUANG"
+          active={Astro.props.active}
+        />
+        <NavbarItem
+          endpoint="berita"
+          href="#"
+          title="BERITA"
+          active={Astro.props.active}
+        />
+        <NavbarItem
+          endpoint="kontak"
+          href="#"
+          title="KONTAK"
+          active={Astro.props.active}
+        />
+        <NavbarItem
+          endpoint="tentang kami"
+          href="#"
+          title="TENTANG KAMI"
+          active={Astro.props.active}
+        />
+        <slot name="nav-bottom" />
+        <style>
+          .navbar {
+            max-width: 100vw;
+          }
+          .navbar-brand {
+            color: var(--primary) !important;
+          }
+        </style>
       </ul>
     </div>
   </div>
 </nav>
-<slot name="nav-bottom" />
-<style>
-  .navbar {
-    max-width: 100vw;
-  }
-  .navbar-brand {
-    color: var(--primary) !important;
-  }
-  .navbar-nav a {
-    font-weight: 700;
-    transition: 300ms;
-  }
-  .navbar-nav a:hover,
-  .navbar-nav .active {
-    color: var(--primary);
-  }
-  .navbar-nav a:not(:hover) {
-    color: var(--secondary) !important;
-  }
-</style>
