add loading=eager on carousel images

--- a/src/component/CarouselItem.astro
+++ b/src/component/CarouselItem.astro
@@ -15,6 +15,7 @@ import Img5 from "../assets/carousel/5.jpg";
       <button class="carousel-btn btn">Lihat semua menu</button>
     </div>
     <Image
+      loading="eager"
       style="object-fit: cover;"
       class="w-100 h-100 img"
       src={Img}
@@ -32,6 +33,7 @@ import Img5 from "../assets/carousel/5.jpg";
       <!-- <button class="carousel-btn btn">Lihat semua menu</button> -->
     </div>
     <Image
+      loading="eager"
       style="object-fit: cover;"
       class="w-100 h-100 img"
       src={Img2}
@@ -51,6 +53,7 @@ import Img5 from "../assets/carousel/5.jpg";
       <button class="carousel-btn btn">Lihat keuntungan</button>
     </div>
     <Image
+      loading="eager"
       style="object-fit: cover;"
       class="w-100 h-100 img"
       src={Img3}
@@ -68,6 +71,7 @@ import Img5 from "../assets/carousel/5.jpg";
       <button class="carousel-btn btn">Cari gerai terdekat</button>
     </div>
     <Image
+      loading="eager"
       style="object-fit: cover;"
       class="w-100 img h-100"
       src={Img4}
@@ -85,6 +89,7 @@ import Img5 from "../assets/carousel/5.jpg";
       <button class="carousel-btn btn">Lihat penghargaan</button>
     </div>
     <Image
+      loading="eager"
       style="object-fit: cover;"
       class="w-100 h-100 img"
       src={Img5}
